# ADAS

./: .gitignore  CMakeLists.txt  README.md  installOpenCV-4-on-Ubuntu-18-04.sh
src/: CMakeLists.txt  Detector.cpp  Detector.h  FrameQueue.cpp  FrameQueue.h  VideoIO.cpp  VideoIO.h  main.cpp  types.h
